# Kirin9000S_Spoofer

./: customize.sh  module.prop
.github/workflows/: build.yml
zygisk/: CMakeLists.txt  main.cpp  zygisk.hpp
